--- a/pages/Art-History-and-Visual-Culture.html
+++ b/pages/Art-History-and-Visual-Culture.html
@@ -37,9 +37,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• Curators</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• Museum curators</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Archivists</b></p>
-            <p class="w3-text-grey"><b>• Exhibition assistants</b></p>
+            <p class="w3-text-grey"><b>• Art gallery curators</b></p>
             <p class="w3-text-grey"><b>• Research assistants</b></p>
             <p class="w3-text-grey"><b>• Preservation specialists</b></p>
 
