--- a/pages/Communication.html
+++ b/pages/Communication.html
@@ -40,8 +40,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Public relations specialists</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Creative directors</b></p>
             <p class="w3-text-grey"><b>• Communications specialists</b></p>
-            <p class="w3-text-grey"><b>• Entrepreneurs</b></p>
-            <p class="w3-text-grey"><b>• Sales leaders</b></p>
+            <p class="w3-text-grey"><b>• Event planners</b></p>
+            <p class="w3-text-grey"><b>• Sales associates</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $40,000 - $50,000</b></p> <!--Salary Information-->
