--- a/pages/Communicative-Sciences-and-Disorders.html
+++ b/pages/Communicative-Sciences-and-Disorders.html
@@ -40,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Audiologists</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Speech-language pathologists</b></p>
             <p class="w3-text-grey"><b>• Language teacher</b></p>
-            <p class="w3-text-grey"><b>• Clinical fellow</b></p>
+            <p class="w3-text-grey"><b>• Clinical supervisors</b></p>
             <p class="w3-text-grey"><b>• Speech therapy assistant</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
