--- a/pages/Comparative-Cultures-and-Politics-Major.html
+++ b/pages/Comparative-Cultures-and-Politics-Major.html
@@ -39,8 +39,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Policy analysts</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Communications specialists</b></p>
-            <p class="w3-text-grey"><b>• Media managers</b></p>
-            <p class="w3-text-grey"><b>• Consultants</b></p>
+            <p class="w3-text-grey"><b>• International relations researchers</b></p>
+            <p class="w3-text-grey"><b>• Event coordinators</b></p>
             <p class="w3-text-grey"><b>• Cultural aides and ambassadors</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
