--- a/pages/Computer-Science.html
+++ b/pages/Computer-Science.html
@@ -37,14 +37,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• Computer programmers</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Software engineers</b></p>
+            <p class="w3-text-grey"><b>• Software engineers</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• Data scientist</b></p>
             <p class="w3-text-grey"><b>• Systems analysts</b></p>
             <p class="w3-text-grey"><b>• Information security analysts</b></p>
             <p class="w3-text-grey"><b>• Web developers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
-            <p class="w3-text-grey"><b>• $70,000 - $80,000</b></p> <!--Salary Information-->
+            <p class="w3-text-grey"><b>• $65,000 - $75,000</b></p> <!--Salary Information-->
             <br>
             <!--Zippia Embeds-->
 
