--- a/pages/Dietetics.html
+++ b/pages/Dietetics.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Dietitians and nutritionists</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Dietetic technicians</b></p>
-            <p class="w3-text-grey"><b>• Health advisers</b></p>
+            <p class="w3-text-grey"><b>• Healthcare therapists</b></p>
             <p class="w3-text-grey"><b>• Food service managers</b></p>
             <p class="w3-text-grey"><b>• Food service consultants</b></p>
 
