--- a/pages/Economics.html
+++ b/pages/Economics.html
@@ -41,7 +41,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Economists</b></p>
             <p class="w3-text-grey"><b>• Managers</b></p>
             <p class="w3-text-grey"><b>• Investment advisers</b></p>
-            <p class="w3-text-grey"><b>• Sales managers</b></p>
+            <p class="w3-text-grey"><b>• Human resource specialists</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $55,000 - $65,000</b></p> <!--Salary Information-->
