--- a/pages/Food-Science.html
+++ b/pages/Food-Science.html
@@ -41,7 +41,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Food scientists</b></p>
             <p class="w3-text-grey"><b>• Quality control scientists</b></p>
             <p class="w3-text-grey"><b>• Research associates</b></p>
-            <p class="w3-text-grey"><b>• Agricultural sciences teachers</b></p>
+            <p class="w3-text-grey"><b>• Nutritional therapists</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $45,000 - $55,000</b></p> <!--Salary Information-->
