--- a/pages/Global-Studies-in-the-Arts-and-Humanities.html
+++ b/pages/Global-Studies-in-the-Arts-and-Humanities.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Political scientists</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Research assistants</b></p>
-            <p class="w3-text-grey"><b>• Student advisors</b></p>
+            <p class="w3-text-grey"><b>• Museum curators</b></p>
             <p class="w3-text-grey"><b>• Marketing executives</b></p>
             <p class="w3-text-grey"><b>• Site coordinators</b></p>
 
