--- a/pages/Global-and-International-Studies-in-Social-Science.html
+++ b/pages/Global-and-International-Studies-in-Social-Science.html
@@ -39,8 +39,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Political scientists</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Instructors</b></p>
-            <p class="w3-text-grey"><b>• Advisors</b></p>
-            <p class="w3-text-grey"><b>• Communications specialists</b></p>
+            <p class="w3-text-grey"><b>• Social science researchers</b></p>
+            <p class="w3-text-grey"><b>• Marketing directors</b></p>
             <p class="w3-text-grey"><b>• Legal assistants</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
