--- a/pages/History-Philosophy-and-Sociology-of-Science.html
+++ b/pages/History-Philosophy-and-Sociology-of-Science.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Philosopher</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Historian</b></p>
-            <p class="w3-text-grey"><b>• Banker</b></p>
+            <p class="w3-text-grey"><b>• Project managers</b></p>
             <p class="w3-text-grey"><b>• Public relations director</b></p>
             <p class="w3-text-grey"><b>• Lawyer</b></p>
 
