--- a/pages/Hospitality-Business.html
+++ b/pages/Hospitality-Business.html
@@ -40,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Hotel general managers</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Food service managers</b></p>
             <p class="w3-text-grey"><b>• Club managers</b></p>
-            <p class="w3-text-grey"><b>• Entrepreneurs</b></p>
+            <p class="w3-text-grey"><b>• Restaurant managers</b></p>
             <p class="w3-text-grey"><b>• Sales directors</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
