--- a/pages/Human-Capital-and-Society.html
+++ b/pages/Human-Capital-and-Society.html
@@ -38,7 +38,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Health care professionals</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Consultants</b></p>
+            <p class="w3-text-grey"><b>• Human resource managers</b></p>
             <p class="w3-text-grey"><b>• Marketing advisers</b></p>
             <p class="w3-text-grey"><b>• Real estate professionals and advisers</b></p>
             <p class="w3-text-grey"><b>• Urban and regional planners</b></p>
