--- a/pages/Human-Development-and-Family-Studies.html
+++ b/pages/Human-Development-and-Family-Studies.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Counselors</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Support providers</b></p>
-            <p class="w3-text-grey"><b>• Service providers</b></p>
+            <p class="w3-text-grey"><b>• Caseworkers</b></p>
             <p class="w3-text-grey"><b>• Behavior specialists</b></p>
             <p class="w3-text-grey"><b>• Human services agency directors</b></p>
 
