--- a/pages/Linguistics.html
+++ b/pages/Linguistics.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Interpreters and translators</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Civil rights managers</b></p>
-            <p class="w3-text-grey"><b>• Foreign language and literature teachers</b></p>
+            <p class="w3-text-grey"><b>• Speech therapists</b></p>
             <p class="w3-text-grey"><b>• Legal assistants</b></p>
             <p class="w3-text-grey"><b>• Content developers</b></p>
 
