--- a/pages/Marketing.html
+++ b/pages/Marketing.html
@@ -40,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Marketing directors</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Marketing managers</b></p>
             <p class="w3-text-grey"><b>• Marketing associate</b></p>
-            <p class="w3-text-grey"><b>• Digital marketing managers</b></p>
+            <p class="w3-text-grey"><b>• Sales managers</b></p>
             <p class="w3-text-grey"><b>• Communication specialists</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
