--- a/pages/Materials-Science-and-Engineering.html
+++ b/pages/Materials-Science-and-Engineering.html
@@ -40,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Aerospace engineers</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Automotive engineers</b></p>
             <p class="w3-text-grey"><b>• Materials scientists</b></p>
-            <p class="w3-text-grey"><b>• Architectural and engineering managers</b></p>
+            <p class="w3-text-grey"><b>• CAD technicians</b></p>
             <p class="w3-text-grey"><b>• Manufacturing engineers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
