--- a/pages/Packaging.html
+++ b/pages/Packaging.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Packaging engineers</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Engineering technicians</b></p>
-            <p class="w3-text-grey"><b>• Industrial engineers</b></p>
+            <p class="w3-text-grey"><b>• Consumer behavior analysts</b></p>
             <p class="w3-text-grey"><b>• Operational managers</b></p>
             <p class="w3-text-grey"><b>• Product quality analysts</b></p>
 
