--- a/pages/Social-Relations-and-Policy.html
+++ b/pages/Social-Relations-and-Policy.html
@@ -38,10 +38,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Attorneys</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Journalists</b></p>
+            <p class="w3-text-grey"><b>• Management consultants</b></p>
             <p class="w3-text-grey"><b>• Analysts</b></p>
             <p class="w3-text-grey"><b>• Social workers</b></p>
-            <p class="w3-text-grey"><b>• Legislators</b></p>
+            <p class="w3-text-grey"><b>• Human resource representatives</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $40,000 - $50,000</b></p> <!--Salary Information-->
