--- a/pages/Sociology.html
+++ b/pages/Sociology.html
@@ -38,7 +38,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Sociologists</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Mortgage bankers</b></p>
+            <p class="w3-text-grey"><b>• Rehabilitation counselors</b></p>
             <p class="w3-text-grey"><b>• Residential relief technicians</b></p>
             <p class="w3-text-grey"><b>• Technical recruiters</b></p>
             <p class="w3-text-grey"><b>• Youth service workers</b></p>
