--- a/pages/Urban-and-Regional-Planning.html
+++ b/pages/Urban-and-Regional-Planning.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Urban and regional planners</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Planning directors</b></p>
-            <p class="w3-text-grey"><b>• City managers</b></p>
+            <p class="w3-text-grey"><b>• Building inspectors</b></p>
             <p class="w3-text-grey"><b>• Transportation planners</b></p>
             <p class="w3-text-grey"><b>• Regional planners</b></p>
 
