--- a/pages/Women's-and-Gender-Studies.html
+++ b/pages/Women's-and-Gender-Studies.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Early intervention specialists</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Cultural studies teachers</b></p>
-            <p class="w3-text-grey"><b>• Health educators</b></p>
+            <p class="w3-text-grey"><b>• Writers</b></p>
             <p class="w3-text-grey"><b>• Events coordinators</b></p>
             <p class="w3-text-grey"><b>• Crisis and community outreach managers</b></p>
 
