--- a/pages/Agriculture-Food-and-Natural-Resources-Education.html
+++ b/pages/Agriculture-Food-and-Natural-Resources-Education.html
@@ -37,9 +37,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• Agricultural consultant</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• FFA adviser</b></p>
-            <p class="w3-text-grey"><b>• Agricultural sales</b></p>
+            <p class="w3-text-grey"><b>• Agricultural consultants</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• FFA advisers</b></p>
+            <p class="w3-text-grey"><b>• Field researchers</b></p>
             <p class="w3-text-grey"><b>• Agriculture teacher</b></p>
             <p class="w3-text-grey"><b>• Financial consultants</b></p>
 
