--- a/pages/Anthropology.html
+++ b/pages/Anthropology.html
@@ -38,10 +38,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Anthropologists and archeologists</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Managers</b></p>
-            <p class="w3-text-grey"><b>• College advisor</b></p>
+            <p class="w3-text-grey"><b>• Museum curators</b></p>
+            <p class="w3-text-grey"><b>• College advisors</b></p>
             <p class="w3-text-grey"><b>• Anthropology and archeology teachers</b></p>
-            <p class="w3-text-grey"><b>• Sales associate</b></p>
+            <p class="w3-text-grey"><b>• Sales associates</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $35,000 - $45,000</b></p> <!--Salary Information-->
