--- a/pages/Astrophysics.html
+++ b/pages/Astrophysics.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Astronomers</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Physicists</b></p>
-            <p class="w3-text-grey"><b>• Natural sciences managers</b></p>
+            <p class="w3-text-grey"><b>• Researchers</b></p>
             <p class="w3-text-grey"><b>• Planetarium workers</b></p>
             <p class="w3-text-grey"><b>• High School science teachers</b></p>
 
