--- a/pages/Biomedical-Laboratory-Science.html
+++ b/pages/Biomedical-Laboratory-Science.html
@@ -41,7 +41,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Medical scientists</b></p>
             <p class="w3-text-grey"><b>• Educators</b></p>
             <p class="w3-text-grey"><b>• Phlebotomists</b></p>
-            <p class="w3-text-grey"><b>• Biological scientists</b></p>
+            <p class="w3-text-grey"><b>• Forensic scientists</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $40,000 - $50,000</b></p> <!--Salary Information-->
