--- a/pages/Criminal-Justice.html
+++ b/pages/Criminal-Justice.html
@@ -40,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Correctional officers</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Jailers</b></p>
             <p class="w3-text-grey"><b>• Parole agents</b></p>
-            <p class="w3-text-grey"><b>• Mortgage bankers</b></p>
+            <p class="w3-text-grey"><b>• Police officers</b></p>
             <p class="w3-text-grey"><b>• Loss prevention associates</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
