--- a/pages/Digital-Storytelling.html
+++ b/pages/Digital-Storytelling.html
@@ -37,11 +37,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• Director</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Producer</b></p>
-            <p class="w3-text-grey"><b>• Film editor</b></p>
-            <p class="w3-text-grey"><b>• Cinematographer</b></p>
-            <p class="w3-text-grey"><b>• Production assistant</b></p>
+            <p class="w3-text-grey"><b>• Directors</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• Producers</b></p>
+            <p class="w3-text-grey"><b>• Film editors</b></p>
+            <p class="w3-text-grey"><b>• Cinematographers</b></p>
+            <p class="w3-text-grey"><b>• Production assistants</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $40,000 - $50,000</b></p> <!--Salary Information-->
