--- a/pages/Environmental-Geosciences.html
+++ b/pages/Environmental-Geosciences.html
@@ -37,11 +37,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• Geographers</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• Meteorologists</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Environmental science and protection technicians</b></p>
             <p class="w3-text-grey"><b>• Geoscientists</b></p>
             <p class="w3-text-grey"><b>• Teachers</b></p>
-            <p class="w3-text-grey"><b>• Meteorologists</b></p>
+            <p class="w3-text-grey"><b>• Seismologists</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $45,000 - $55,000</b></p> <!--Salary Information-->
