--- a/pages/Fisheries-and-Wildlife.html
+++ b/pages/Fisheries-and-Wildlife.html
@@ -38,7 +38,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Wildlife biologist</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Fish and game wardens</b></p>
+            <p class="w3-text-grey"><b>• Marine biologist</b></p>
             <p class="w3-text-grey"><b>• Forestry workers</b></p>
             <p class="w3-text-grey"><b>• Researchers</b></p>
             <p class="w3-text-grey"><b>• Laboratory assistants</b></p>
