--- a/pages/Forestry.html
+++ b/pages/Forestry.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Foresters</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Conservation scientists</b></p>
-            <p class="w3-text-grey"><b>• Researchers</b></p>
+            <p class="w3-text-grey"><b>• Fire ecologists</b></p>
             <p class="w3-text-grey"><b>• Educators</b></p>
             <p class="w3-text-grey"><b>• Environmental sustainability coordinators</b></p>
 
