--- a/pages/German.html
+++ b/pages/German.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Web content writers</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Cultural excursion guides</b></p>
-            <p class="w3-text-grey"><b>• Legal affairs and risk managers</b></p>
+            <p class="w3-text-grey"><b>• Sales associates</b></p>
             <p class="w3-text-grey"><b>• Brand managers</b></p>
             <p class="w3-text-grey"><b>• Sales managers</b></p>
 
