--- a/pages/Global-History.html
+++ b/pages/Global-History.html
@@ -37,11 +37,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• Government historian</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Political advisor</b></p>
-            <p class="w3-text-grey"><b>• Archivist</b></p>
-            <p class="w3-text-grey"><b>• Museum curator</b></p>
-            <p class="w3-text-grey"><b>• Educator</b></p>
+            <p class="w3-text-grey"><b>• Government historians</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• Political advisors</b></p>
+            <p class="w3-text-grey"><b>• Archivists</b></p>
+            <p class="w3-text-grey"><b>• Museum curators</b></p>
+            <p class="w3-text-grey"><b>• Educators</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $40,000 - $50,000</b></p> <!--Salary Information-->
