--- a/pages/History.html
+++ b/pages/History.html
@@ -41,7 +41,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• History teacher</b></p>
             <p class="w3-text-grey"><b>• Research analyst</b></p>
             <p class="w3-text-grey"><b>• Museum services associates</b></p>
-            <p class="w3-text-grey"><b>• Mortgage bankers</b></p>
+            <p class="w3-text-grey"><b>• Writers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $40,000 - $50,000</b></p> <!--Salary Information-->
