--- a/pages/International-Relations.html
+++ b/pages/International-Relations.html
@@ -38,10 +38,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Public relations specialists</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Administrators</b></p>
+            <p class="w3-text-grey"><b>• Marketing managers</b></p>
             <p class="w3-text-grey"><b>• Corporate liaisons</b></p>
             <p class="w3-text-grey"><b>• Health care professionals</b></p>
-            <p class="w3-text-grey"><b>• Correspondents</b></p>
+            <p class="w3-text-grey"><b>• Human resources managers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $45,000 - $55,000</b></p> <!--Salary Information-->
