--- a/pages/Landscape-Architecture.html
+++ b/pages/Landscape-Architecture.html
@@ -40,8 +40,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Landscape architects</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Architectural and engineering managers</b></p>
             <p class="w3-text-grey"><b>• Landscape designers</b></p>
-            <p class="w3-text-grey"><b>• Associate landscape designers</b></p>
-            <p class="w3-text-grey"><b>• Assistant unit cost coordinators</b></p>
+            <p class="w3-text-grey"><b>• Interior designers</b></p>
+            <p class="w3-text-grey"><b>• Structural engineers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $45,000 - $55,000</b></p> <!--Salary Information-->
