--- a/pages/Microbiology.html
+++ b/pages/Microbiology.html
@@ -41,7 +41,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Clinical microbiologists</b></p>
             <p class="w3-text-grey"><b>• Anatomic pathologists</b></p>
             <p class="w3-text-grey"><b>• Laboratory analysts</b></p>
-            <p class="w3-text-grey"><b>• Medical researchers</b></p>
+            <p class="w3-text-grey"><b>• Biosafety specialists</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $45,000 - $55,000</b></p> <!--Salary Information-->
