--- a/pages/Neuroscience.html
+++ b/pages/Neuroscience.html
@@ -38,7 +38,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Neurologists</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Pharmaceutical technicians</b></p>
+            <p class="w3-text-grey"><b>• Clinical psychologists</b></p>
             <p class="w3-text-grey"><b>• Clinical nurse specialists</b></p>
             <p class="w3-text-grey"><b>• Neuroscientists</b></p>
             <p class="w3-text-grey"><b>• Laboratory technicians</b></p>
