--- a/pages/Nursing.html
+++ b/pages/Nursing.html
@@ -39,8 +39,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Hospice nurses</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Intensive care nurses</b></p>
-            <p class="w3-text-grey"><b>• Emergency care nurses</b></p>
             <p class="w3-text-grey"><b>• Pediatric nurses</b></p>
+            <p class="w3-text-grey"><b>• Health educators</b></p>
             <p class="w3-text-grey"><b>• School nurses</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
