--- a/pages/Philosophy.html
+++ b/pages/Philosophy.html
@@ -41,7 +41,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Legislative and political director</b></p>
             <p class="w3-text-grey"><b>• English teaching Fulbright fellows</b></p>
             <p class="w3-text-grey"><b>• Attorneys</b></p>
-            <p class="w3-text-grey"><b>• Client service advocates</b></p>
+            <p class="w3-text-grey"><b>• Stockbrokers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $45,000 - $55,000</b></p> <!--Salary Information-->
