--- a/pages/Physics.html
+++ b/pages/Physics.html
@@ -40,8 +40,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Physicists</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Cyclotron specialists</b></p>
             <p class="w3-text-grey"><b>• Laboratory technicians</b></p>
-            <p class="w3-text-grey"><b>• Research associates</b></p>
-            <p class="w3-text-grey"><b>• Physics teachers</b></p>
+            <p class="w3-text-grey"><b>• Research analysts</b></p>
+            <p class="w3-text-grey"><b>• Process engineers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $55,000 - $65,000</b></p> <!--Salary Information-->
