--- a/pages/Physiology.html
+++ b/pages/Physiology.html
@@ -40,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Cardiology assistants</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Disease control specialists</b></p>
             <p class="w3-text-grey"><b>• Laboratory technicians</b></p>
-            <p class="w3-text-grey"><b>• Veterinary technicians</b></p>
+            <p class="w3-text-grey"><b>• Pharmacologists</b></p>
             <p class="w3-text-grey"><b>• Health specialties teachers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
