--- a/pages/Political-Science-Prelaw.html
+++ b/pages/Political-Science-Prelaw.html
@@ -40,8 +40,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Attorneys</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Field campaign organizers</b></p>
             <p class="w3-text-grey"><b>• Business managers</b></p>
-            <p class="w3-text-grey"><b>• Legal assistants</b></p>
-            <p class="w3-text-grey"><b>• Process analysts</b></p>
+            <p class="w3-text-grey"><b>• Policy analysts</b></p>
+            <p class="w3-text-grey"><b>• Public relations specialists</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $50,000 - $60,000</b></p> <!--Salary Information-->
