--- a/pages/Psychology.html
+++ b/pages/Psychology.html
@@ -40,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Psychologists</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Behavior analysts</b></p>
             <p class="w3-text-grey"><b>• Health care coordinators</b></p>
-            <p class="w3-text-grey"><b>• Research assistants</b></p>
+            <p class="w3-text-grey"><b>• Substance abuse counselors</b></p>
             <p class="w3-text-grey"><b>• Family support workers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
