--- a/pages/Quantitative-Risk-Analytics.html
+++ b/pages/Quantitative-Risk-Analytics.html
@@ -38,7 +38,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Business Analyst</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Insurance risk management</b></p>
+            <p class="w3-text-grey"><b>• Risk managers</b></p>
             <p class="w3-text-grey"><b>• Financial Analyst</b></p>
             <p class="w3-text-grey"><b>• Quantitative Analyst</b></p>
             <p class="w3-text-grey"><b>• Quantitative Trader</b></p>
