Added button transitions and changed quiz colors

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div class="modal-content"> <!--Quiz content-->
         <span class="close">&times;</span>
         <div class="container text-center">
-          <h1>What should you major in?</h1>
+          <h1 style="color:white">What should you major in?</h1>
         </div>
         <div class="container text-center">
-          <ul id="quiz" class="list-group">
+          <ul id="quiz" class="list-group" style="color:white">
           </ul>
         </div>
         <div class="container text-center bottom">
@@ -33,7 +33,7 @@
           <button id="retake-btn" class="hide btn btn-primary btn-lg">Retake Quiz</button>
         </div>
         <div class="container text-center results hide">
-          <p id="results"></p>
+          <p id="results" style="color:white"></p>
         </div>
       </div>
     </div> <!--Quiz ends-->
