--- a/pages/Computational-Mathematics.html
+++ b/pages/Computational-Mathematics.html
@@ -43,7 +43,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Bioinformatics engineers</b></p>
             <p class="w3-text-grey"><b>• Statisticians</b></p>
             <p class="w3-text-grey"><b>• Network and computer systems administrators</b></p>
-            <p class="w3-text-grey"><b>• Actuary</b></p>
+            <p class="w3-text-grey"><b>• Actuaries</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $55,000 - $65,000</b></p> <!--Salary Information-->
