--- a/pages/Advertising-Creative.html
+++ b/pages/Advertising-Creative.html
@@ -43,7 +43,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Graphic designers</b></p>
             <p class="w3-text-grey"><b>• Project designers</b></p>
             <p class="w3-text-grey"><b>• Consultants</b></p>
-            <p class="w3-text-grey"><b>• Marketing coordinator</b></p>
+            <p class="w3-text-grey"><b>• Marketing coordinators</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $45,000 - $55,000</b></p> <!--Salary Information-->
