--- a/pages/Agribusiness-Management.html
+++ b/pages/Agribusiness-Management.html
@@ -41,7 +41,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Appraisers</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Sales managers</b></p>
-            <p class="w3-text-grey"><b>• Research technician</b></p>
+            <p class="w3-text-grey"><b>• Research technicians</b></p>
             <p class="w3-text-grey"><b>• Sales representatives</b></p>
             <p class="w3-text-grey"><b>• Financial analysts</b></p>
 
