--- a/pages/Agriculture-Food-and-Natural-Resources-Education.html
+++ b/pages/Agriculture-Food-and-Natural-Resources-Education.html
@@ -42,7 +42,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Agricultural consultants</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• FFA advisers</b></p>
             <p class="w3-text-grey"><b>• Field researchers</b></p>
-            <p class="w3-text-grey"><b>• Agriculture teacher</b></p>
+            <p class="w3-text-grey"><b>• Agriculture teachers</b></p>
             <p class="w3-text-grey"><b>• Financial consultants</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
