--- a/pages/Arabic.html
+++ b/pages/Arabic.html
@@ -43,7 +43,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Senate staffers</b></p>
             <p class="w3-text-grey"><b>• Consultants</b></p>
             <p class="w3-text-grey"><b>• Foreign service officers</b></p>
-            <p class="w3-text-grey"><b>• Management analyst</b></p>
+            <p class="w3-text-grey"><b>• Management analysts</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $45,000 - $55,000</b></p> <!--Salary Information-->
