--- a/pages/Information-Science.html
+++ b/pages/Information-Science.html
@@ -43,7 +43,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Web developers</b></p>
             <p class="w3-text-grey"><b>• Software developers</b></p>
             <p class="w3-text-grey"><b>• Systems analysts</b></p>
-            <p class="w3-text-grey"><b>• User Experience Researchers</b></p>
+            <p class="w3-text-grey"><b>• User experience researchers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $55,000 - $65,000</b></p> <!--Salary Information-->
