--- a/pages/Accounting.html
+++ b/pages/Accounting.html
@@ -152,7 +152,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
 
 <button id="modal_btn"><i class="fa fa-edit"></i> Read Reviews</button>
 <div id="myModal" class="modal">
-  <div class="modal-content">
+  <div class="modal-content"> <!--Review List-->
     <span class="close">&times;</span>
     <div class="container text-center">
       <h1 style="color:white; text-align: center; font-weight: bold; font-size: 38px">Reviews from Former Students: </h1>
@@ -160,42 +160,16 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
     <a href="https://forms.gle/ErwBi6FYXD4WJy7k8" target="_blank"><button id="review_btn" class="btn btn-primary btn-lg"> Leave a Review!</button></a>
     <br>
     <div class="review_list">
-      <h2 style="font-weight: bold; font-size: 28px">Amazing Major!</h2> <!--Headline-->
-      <h3 style="font-size: 20px">This is a example review for the Accounting major at Michigan State University. I graduated in 2021 and loved this major. The professors are great and actually care about you. Would definitely recommend!</h3> <!--Description-->
-      <i class="fa fa-thumbs-up" style="font-size:36px;color:green"></i> <!--Change color to "green" if recommended-->
+      <h2 style="font-weight: bold; font-size: 28px">It's empty around here</h2> <!--Headline-->
+      <h3 style="font-size: 20px">Be the first to leave a review for this major!</h3> <!--Description-->
+      <i class="fa fa-thumbs-up" style="font-size:36px;color:white"></i> <!--Change color to "green" if recommended-->
       <i class="fa fa-thumbs-down" style="font-size:36px;color:white"></i> <!--Change color to "red" if not recommended-->
       <h4 style="font-size: 20px; float: right">Aug 27th, 2021 - Anonymous</h4> <!--Date and first name-->
       <hr>
     </div>
 
-    <div class="review_list">
-      <h2 style="font-weight: bold; font-size: 28px">Amazing Major!</h2> <!--Headline-->
-      <h3 style="font-size: 20px">This is a example review for the Accounting major at Michigan State University. I graduated in 2021 and loved this major. The professors are great and actually care about you. Would definitely recommend!</h3> <!--Description-->
-      <i class="fa fa-thumbs-up" style="font-size:36px;color:green"></i> <!--Change color to "green" if recommended-->
-      <i class="fa fa-thumbs-down" style="font-size:36px;color:white"></i> <!--Change color to "red" if not recommended-->
-      <h4 style="font-size: 20px; float: right">Aug 27th, 2021 - Anonymous</h4> <!--Date and first name-->
-      <hr>
-    </div>
 
-    <div class="review_list">
-      <h2 style="font-weight: bold; font-size: 28px">Amazing Major!</h2> <!--Headline-->
-      <h3 style="font-size: 20px">This is a example review for the Accounting major at Michigan State University. I graduated in 2021 and loved this major. The professors are great and actually care about you. Would definitely recommend!</h3> <!--Description-->
-      <i class="fa fa-thumbs-up" style="font-size:36px;color:green"></i> <!--Change color to "green" if recommended-->
-      <i class="fa fa-thumbs-down" style="font-size:36px;color:white"></i> <!--Change color to "red" if not recommended-->
-      <h4 style="font-size: 20px; float: right">Aug 27th, 2021 - Anonymous</h4> <!--Date and first name-->
-      <hr>
-    </div>
-
-    <div class="review_list">
-      <h2 style="font-weight: bold; font-size: 28px">Amazing Major!</h2> <!--Headline-->
-      <h3 style="font-size: 20px">This is a example review for the Accounting major at Michigan State University. I graduated in 2021 and loved this major. The professors are great and actually care about you. Would definitely recommend!</h3> <!--Description-->
-      <i class="fa fa-thumbs-up" style="font-size:36px;color:green"></i> <!--Change color to "green" if recommended-->
-      <i class="fa fa-thumbs-down" style="font-size:36px;color:white"></i> <!--Change color to "red" if not recommended-->
-      <h4 style="font-size: 20px; float: right">Aug 27th, 2021 - Anonymous</h4> <!--Date and first name-->
-      <hr>
-    </div>
-
-  </div>
+  </div> <!--Review List Ends-->
 </div>
 
 <footer class="w3-container w3-white w3-center w3-margin-top">
