Updated meta description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="Michigan State University career and academic information about the different majors">
+    <meta name="description" content="Learn about the different majors Michigan State University has to offer along with career information.">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400" rel="stylesheet" defer/>
     <link href="css/main.css" rel="stylesheet" />
     <link href="css/background.css" rel="stylesheet" />
